# rag-api-scaffolding-python

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  DOMAIN.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
scripts/: setup.sh
src/: config.py  main.py
src/adapters/input/api/: __init__.py
src/adapters/input/api/middleware/: __init__.py  error_handler.py  logging.py
src/adapters/input/api/routers/: admin.py  health.py  rag.py
src/adapters/input/api/schemas/: requests.py  responses.py
src/adapters/output/: formatters.py  logger.py
src/core/: exceptions.py
src/core/domain/: rag.py
src/core/ports/: repositories.py  services.py
src/core/services/: rag_orchestrator.py
src/core/services/rag/: __init__.py  context_service.py  embedding_service.py  generation_service.py  pipeline.py  prompt_service.py  retrieval_service.py
src/infrastructure/: dependencies.py  langchain_services.py  monitoring.py  vector_store_init.py
src/infrastructure/rag/: __init__.py  langchain_implementations.py
tests/: conftest.py  mocks.py  test_api.py  test_orchestrator.py  test_schemas.py
